# AppleMIDI2IPMIDIBridge

./: CMakeLists.txt  README.md  a2im.cpp  a2im.service  example.cfg  postinst
